# kg-platform-frontend

./: .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  index.html  vite.config.ts
backend/: .env.example  AGENTS.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_p1_schema.py  0002_source_doc.py  0003_source_url_on_doc_and_batch.py  0004_source_title.py  0005_p2_review_sync.py  0006_feishu_source_doc_fields.py  0007_feishu_auth_timestamps.py  (+3 more)
backend/app/: config.py  errors.py  main.py
backend/doc/: README.md  code-review-feishu-p2.md  local-dev-p2.md  overview.md  roadmap.md
backend/scripts/: dev_mcp_probe.py  poc_viking.py
backend/tests/: conftest.py  test_align.py  test_api.py  test_audit_writer.py  test_auth.py  test_console_admin.py  test_console_auth.py  test_console_gaps.py  test_console_knowledge.py  test_dedup.py  test_dev_login.py  test_feishu_archive_cleanup.py  test_feishu_auth_poll.py  test_feishu_auth_state.py  test_feishu_card.py  test_feishu_client.py  test_feishu_console_api.py  test_feishu_doc_resolver.py  test_feishu_docx_to_markdown.py  test_feishu_event.py  test_feishu_live.py  test_feishu_media.py  test_feishu_mq.py  test_feishu_poll.py  test_feishu_rate_limiter.py  test_feishu_risk_matrix.py  test_feishu_sync.py  test_feishu_sync_risk.py  test_gateway.py  test_import_dedup.py  test_kid.py  test_mcp_server.py  test_mcp_transport.py  test_p2_schema.py  test_parser.py  test_publish.py  test_review_api.py  test_scheduler_jobs.py  test_scheduler_main.py  test_sensitive.py  (+6 more)
scripts/: dev.sh
(+143 files in other folders)
